# SecureNotes

./: style.css
Frontend/: Cargo.toml  index.html  package-lock.json  package.json
Frontend/src/: main.rs
Frontend/src/pages/: auth.rs  home.rs  login.rs  mod.rs  notes.rs  register.rs
backend/: Pipfile  db.sqlite3
backend/accounts/: admin.py  authTokens.py  models.py  serializers.py  urls.py  vedhashing.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/secureNotes/: asgi.py  settings.py  urls.py  wsgi.py
